test: Write unit tests. Improve CTRF extension architecture and configuration management
- Refactor CtrfJsonComposer and related classes to use dependency injection with ConfigReader
- Replace static utility methods with instance methods for better testability
- Add AssertJ and Mockito for enhanced test coverage